--- a/the-profile-of-an-average-nba-player-in-2019.ipynb
+++ b/the-profile-of-an-average-nba-player-in-2019.ipynb
@@ -851,7 +851,8 @@
    "metadata": {},
    "source": [
     "Mitch Creek is the most Average Player of the NBa based on our average player profile statistics!\n",
-    "Creek is 26 years old, 77 inch long, weighs 216 pounds en was contracted by the Brooklyn Nets this year."
+    "Creek is 26 years old, 77 inch long, weighs 216 pounds en was contracted by the Brooklyn Nets this year.\n"
+    "Thanks for reading."
    ]
   },
   {
